--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@types/node": "^22.7.6",
 		"nodemon": "^3.1.7",
+		"prettier": "^3.3.3",
 		"rimraf": "^6.0.1",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.6.3"
