--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^22.7.6",
 		"@types/prompts": "^2.4.9",
 		"nodemon": "^3.1.7",
@@ -24,6 +25,7 @@
 	"dependencies": {
 		"@clack/prompts": "^0.7.0",
 		"@prisma/client": "^5.21.1",
+		"bcrypt": "^5.1.1",
 		"dotenv": "^16.4.5",
 		"googleapis": "^144.0.0",
 		"prompts": "^2.4.2"
