--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
 	"dependencies": {
 		"@clack/prompts": "^0.7.0",
 		"@prisma/client": "^5.21.1",
+		"axios": "^1.7.7",
 		"bcrypt": "^5.1.1",
 		"dotenv": "^16.4.5",
+		"form-data": "^4.0.1",
 		"googleapis": "^144.0.0",
 		"prompts": "^2.4.2",
 		"tsup": "^8.3.0"
