--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "@shadhin17/file-share-cli",
+	"name": "share-files-cli",
 	"publishConfig": {
 		"access": "public"
 	},
-	"version": "0.0.4",
-	"description": "Secure file sharing CLI tool",
+	"version": "0.0.1",
+	"description": "File sharing with command line interface",
 	"main": "./dist/main.js",
 	"module": "./dist/main.mjs",
 	"types": "./dist/main.d.ts",
