--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"version": "1.0.2",
+	"version": "1.0.2-development",
 	"description": "File sharing with command line interface",
 	"main": "./dist/main.js",
 	"module": "./dist/main.mjs",
@@ -15,7 +15,8 @@
 	"scripts": {
 		"dev": "npx ts-node ./src/main.ts",
 		"build": "tsup",
-		"start": "npm run build && node ./dist/main.js"
+		"start": "npm run build && node ./dist/main.js",
+		"semantic-release": "semantic-release"
 	},
 	"bin": {
 		"file-share": "./dist/main.js"
@@ -33,6 +34,7 @@
 		"@types/prompts": "^2.4.9",
 		"nodemon": "^3.1.7",
 		"prettier": "^3.3.3",
+		"semantic-release": "^24.1.3",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.6.3"
 	},
@@ -45,5 +47,6 @@
 		"googleapis": "^144.0.0",
 		"prompts": "^2.4.2",
 		"tsup": "^8.3.0"
-	}
+	},
+	"files": ["dist", "README.md"]
 }
